Bug #26261:  INSERT uses query_id to verify what fields are  mentioned in the fields list of the INSERT command.  However the check for that is made after the  ON DUPLICATE KEY is processed. This causes all  the fields mentioned in ON DUPLICATE KEY to be  considered as mentioned in the fields list of  INSERT.  Moved the check up, right after processing the  fields list.

mysql-test/r/insert_update.result:
  Bug #26261: test case
mysql-test/t/insert_update.test:
  Bug #26261: test case
sql/mysql_priv.h:
  Bug #26261: moved the check inside mysql_prepare_insert
sql/sql_insert.cc:
  Bug #26261: move the check inside mysql_prepare_insert
  before setting up the ON DUPLICATE KEY part
sql/sql_prepare.cc:
  Bug #26261: moved the check inside mysql_prepare_insert